# ProphetService

./: Prophet.sln  README.md
Prophet/: CMakeCache.txt  CMakeLists.txt  Makefile  Prophet.cpp  Prophet.vcxproj  Prophet.vcxproj.filters  ProphetService  ProphetServiceStart.sh  cmake_install.cmake  dataset.txt  libcassandra.so.2  result.txt  result2.txt
Prophet/Data/: BasicModelView.hpp  DatabaseSession.cpp  DatabaseSession.hpp  Model.hpp  ModelDatasets.hpp  ModelParams.hpp  ModelParams.hpp.save  ModelParams.hpp.save.1  ModelPredictions.hpp  Upload.hpp  UploadChunks.hpp
Prophet/FileReaders/: CSVReader.cpp  CSVReader.hpp  FlensCsv.cpp  FlensCsv.hpp
Prophet/Libs/_FLENS/: a.out  example.cpp
Prophet/Libs/_FLENS/flens/vectortypes/impl/: densevector.h
Prophet/Libs/cassandra/lib/: cassandra.lib
Prophet/Libs/linux/: cassandra-cpp-driver_2.4.1-1_amd64.deb
Prophet/ML/: Converters.h  FlensDefs.hpp  Functions.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  Variables.hpp  fmincg.cpp  fmincg.h
Prophet/TaskRunner/: Task.hpp  TaskRunner.hpp
Prophet/Tasks/: TaskBasicDataProcess.hpp  TaskPerformPredictions.hpp  TaskProcessUpload.hpp  TaskTrainModel.hpp
